--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -276,65 +276,65 @@ input:checked + .slider:before {
       <img class="demo cursor" src="assets/images/slideshow/010.jpg" style="width:100%" onclick="currentSlide(10)" alt="Snowy Mountains">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:100%" onclick="currentSlide(11)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:75%" onclick="currentSlide(11)" alt="Snowy Mountains">
     </div>
   </div>
 
   <br>
 
   <div class="mySlides">
-    <div class="numbertext">1 / 11</div>
+    <div class="numbertext">1</div>
     <img src="assets/images/slideshow/001.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 11</div>
+    <div class="numbertext">2</div>
     <img src="assets/images/slideshow/002.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 11</div>
+    <div class="numbertext">3</div>
     <img src="assets/images/slideshow/003.jpg" style="width:50%">
   </div>
     
   <div class="mySlides">
-    <div class="numbertext">4 / 11</div>
+    <div class="numbertext">4</div>
     <img src="assets/images/slideshow/004.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">5 / 10</div>
+    <div class="numbertext">5</div>
     <img src="assets/images/slideshow/005.jpg" style="width:50%">
   </div>
     
   <div class="mySlides">
-    <div class="numbertext">6 / 11</div>
+    <div class="numbertext">6</div>
     <img src="assets/images/slideshow/006.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">7 / 11</div>
+    <div class="numbertext">7</div>
     <img src="assets/images/slideshow/007.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">8 / 11</div>
+    <div class="numbertext">8</div>
     <img src="assets/images/slideshow/008.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">9 / 11</div>
+    <div class="numbertext">9</div>
     <img src="assets/images/slideshow/009.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">10 / 11</div>
+    <div class="numbertext">10</div>
     <img src="assets/images/slideshow/010.jpg" style="width:50%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">11 / 11</div>
-    <img src="assets/images/slideshow/011.gif" style="width:50%">
+    <div class="numbertext">11</div>
+    <img src="assets/images/slideshow/011.gif" style="width:45%">
   </div>
 
   <div class="caption-container">
