--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -103,6 +103,13 @@ order: 3
     width: 14%;
     /* flex-shrink: 0; */
   }
+
+  /* Style for images inside each column */
+  .galcolumn img {
+  max-height: 150px; /* Example fixed height, adjust as needed */
+  width: auto; /* Maintain aspect ratio */
+  /* Optionally, you can add object-fit if you want to force images into a specific aspect ratio */
+  }
   
   /* Add a transparency effect for thumnbail images */
   .demo {
