--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -106,7 +106,7 @@ order: 3
 
   /* Style for images inside each column */
   .galcolumn img {
-  max-height: 150px; /* Example fixed height, adjust as needed */
+  max-height: 20%; /* Example fixed height, adjust as needed */
   width: auto; /* Maintain aspect ratio */
   /* Optionally, you can add object-fit if you want to force images into a specific aspect ratio */
   }
