--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -100,13 +100,13 @@ order: 3
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically */
-    width: 14%;
+    /* width: 14%; */
     /* flex-shrink: 0; */
   }
 
   /* Style for images inside each column */
   .galcolumn img {
-  max-height: 20%; /* Example fixed height, adjust as needed */
+  max-height: 300px; /* Example fixed height, adjust as needed */
   width: auto; /* Maintain aspect ratio */
   /* Optionally, you can add object-fit if you want to force images into a specific aspect ratio */
   }
