--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -100,17 +100,20 @@ order: 3
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically */
+    max-width: 10%;
+    width:auto;
     /* width: 14%; */
     /* flex-shrink: 0; */
   }
 
+ 
   /* Style for images inside each column */
-  .galcolumn img {
-  max-height: 100px; /* Example fixed height, adjust as needed */
-  width: auto; /* Maintain aspect ratio */
+  /* .galcolumn img { */
+  /* max-height: 100px; Example fixed height, adjust as needed */
+  /* width: auto; Maintain aspect ratio */
   /* Optionally, you can add object-fit if you want to force images into a specific aspect ratio */
   }
-  
+
   /* Add a transparency effect for thumnbail images */
   .demo {
     opacity: 0.6;
