--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -101,7 +101,7 @@ order: 3
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically */
     height: 10%;
-    width:auto;
+    /* width:auto; */
     /* width: 14%; */
     /* flex-shrink: 0; */
   }
