--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -100,7 +100,7 @@ order: 3
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically */
-    height: 10%;
+    /* height: 10%; */
     /* width:auto; */
     /* width: 14%; */
     /* flex-shrink: 0; */
@@ -108,11 +108,11 @@ order: 3
 
  
   /* Style for images inside each column */
-  /* .galcolumn img { */
-  /* max-height: 100px; Example fixed height, adjust as needed */
-  /* width: auto; Maintain aspect ratio */
+  .galcolumn img {
+  max-height: 200px; /* Example fixed height, adjust as needed */
+  width: auto; /* Maintain aspect ratio */
   /* Optionally, you can add object-fit if you want to force images into a specific aspect ratio */
-  /* } */
+  }
 
   /* Add a transparency effect for thumnbail images */
   .demo {
