--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -128,7 +128,7 @@ order: 3
 .switchgal {
   position: absolute;
   /* display: inline-block; */
-  top:0%;
+  top:20vw;
   right:0;
   width: 60px;
   height: 34px;
