--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -35,7 +35,7 @@ order: 3
   .next {
     cursor: pointer;
     position: absolute;
-    top: 45vw;
+    top: 60%;
     width: auto;
     padding: 16px;
     margin-top: -50px;
