--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -292,6 +292,9 @@ input:checked + .slider:before {
     <div class="galcolumn">
       <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:100%" onclick="currentSlide(11)" alt="Snowy Mountains">
     </div>
+    <div class="galcolumn">
+      <img class="demo cursor" src="assets/images/slideshow/012.jpg" style="width:100%" onclick="currentSlide(12)" alt="Snowy Mountains">
+    </div>
   </div>
 
   <br>
@@ -349,6 +352,11 @@ input:checked + .slider:before {
   <div class="mySlides">
     <div class="numbertext">11</div>
     <img src="assets/images/slideshow/011.gif" style="width:25%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">12</div>
+    <iframe src="https://www.youtube.com/embed/2HP_Hg3E1A8?si=dWBGOO-dFithJWm2" style="width:50%" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 
   <div class="caption-container">
