--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -356,7 +356,7 @@ input:checked + .slider:before {
 
   <div class="mySlides">
     <div class="numbertext">12</div>
-    <iframe src="https://www.youtube.com/embed/2HP_Hg3E1A8?si=dWBGOO-dFithJWm2" style="width:50%;height:auto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/2HP_Hg3E1A8?si=dWBGOO-dFithJWm2" style="width:50%;height:50%" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 
   <div class="caption-container">
