--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -356,7 +356,7 @@ input:checked + .slider:before {
 
   <div class="mySlides">
     <div class="numbertext">12</div>
-    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//2HP_Hg3E1A8' frameborder='0' allowfullscreen></iframe></div>
+    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe width='467' height='831' src='https://www.youtube.com/embed/gcWpuIq7TSY' title='Basil Time-lapse #project #fyp #science #plants' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen></iframe></div>
   </div>
 
   <div class="caption-container">
