--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -260,37 +260,37 @@ input:checked + .slider:before {
 
   <div class="galrow">
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/001.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="assets/images/slideshow/001.jpg" style="width:100%" onclick="currentSlide(1)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/002.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="assets/images/slideshow/002.jpg" style="width:100%" onclick="currentSlide(2)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/003.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="assets/images/slideshow/003.jpg" style="width:100%" onclick="currentSlide(3)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/004.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="assets/images/slideshow/004.jpg" style="width:100%" onclick="currentSlide(4)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/005.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="assets/images/slideshow/005.jpg" style="width:100%" onclick="currentSlide(5)" alt="">
     </div>    
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/006.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/006.jpg" style="width:100%" onclick="currentSlide(6)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/007.jpg" style="width:100%" onclick="currentSlide(7)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/007.jpg" style="width:100%" onclick="currentSlide(7)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/008.jpg" style="width:100%" onclick="currentSlide(8)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/008.jpg" style="width:100%" onclick="currentSlide(8)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/009.jpg" style="width:100%" onclick="currentSlide(9)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/009.jpg" style="width:100%" onclick="currentSlide(9)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/010.jpg" style="width:100%" onclick="currentSlide(10)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/010.jpg" style="width:100%" onclick="currentSlide(10)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:100%" onclick="currentSlide(11)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:100%" onclick="currentSlide(11)" alt="">
     </div>
     <div class="galcolumn">
       <img class="demo cursor" src="assets/images/slideshow/012.gif" style="width:100%" onclick="currentSlide(12)" alt="Snowy Mountains">
