--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -293,7 +293,7 @@ input:checked + .slider:before {
       <img class="demo cursor" src="assets/images/slideshow/011.gif" style="width:100%" onclick="currentSlide(11)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/012.gif" style="width:100%" onclick="currentSlide(12)" alt="Snowy Mountains">
+      <img class="demo cursor" src="assets/images/slideshow/012.gif" style="width:100%" onclick="currentSlide(12)" alt="">
     </div>
   </div>
 
