--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -367,7 +367,7 @@ input:checked + .slider:before {
   <a class="next" onclick="plusSlides(1)">❯</a>
 
   <label class="switchgal">
-    <input type="checkbox" id="slideshowToggle" unchecked>
+    <input type="checkbox" id="slideshowToggle" checked>
     <span class="slider round"></span>
     <span class="tooltiptext">Toggle Autoplay</span>
   </label>
