--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -266,7 +266,7 @@ input:checked + .slider:before {
       <img class="demo cursor" src="assets/images/slideshow/002.jpg" style="width:100%" onclick="currentSlide(2)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="assets/images/slideshow/012.gif" style="width:100%" onclick="currentSlide(3)" alt="">
+      <img class="demo cursor" src="https://i.imgur.com/c2ahgiK.gif" style="width:100%" onclick="currentSlide(3)" alt="">
     </div>
     <div class="galcolumn">
       <img class="demo cursor" src="assets/images/slideshow/003.jpg" style="width:100%" onclick="currentSlide(4)" alt="">
@@ -311,7 +311,7 @@ input:checked + .slider:before {
 
   <div class="mySlides">
     <div class="numbertext">3</div>
-    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src='https://i.imgur.com/c2ahgiK.gif' style='max-width: 75%; height: auto;' alt='Description'></div>
+    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src='https://i.imgur.com/c2ahgiK.gif' style='max-width: 100%; height: auto;' alt='Description'></div>
   </div>
 
   <div class="mySlides">
