--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -266,7 +266,7 @@ input:checked + .slider:before {
       <img class="demo cursor" src="assets/images/slideshow/002.jpg" style="width:100%" onclick="currentSlide(2)" alt="">
     </div>
     <div class="galcolumn">
-      <img class="demo cursor" src="https://i.imgur.com/c2ahgiK.gif" style="width:100%" onclick="currentSlide(3)" alt="">
+      <img class="demo cursor" src="assets/images/slideshow/012.gif" style="height:100%" onclick="currentSlide(3)" alt="">
     </div>
     <div class="galcolumn">
       <img class="demo cursor" src="assets/images/slideshow/003.jpg" style="width:100%" onclick="currentSlide(4)" alt="">
